--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* MINIMAL RESET AND GLOBAL STYLES */
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -5,6 +7,7 @@ html {
 
 body {
   font-size: 1.8rem;
+  font-family: 'Lato', 'Helvetica Neue', sans-serif;
 }
 
 *,
